syntax = "proto3";
package com.android.designcompose.proto.design;

import "design/component.proto";
import "design/element/geometry.proto";
import "design/element/text.proto";
import "design/element/view_shape.proto";
import "design/interaction/reaction.proto";
import "design/layout/grid.proto";
import "design/plugin/frame_extras.proto";
import "design/text_style.proto";
import "design/view_style.proto";

option java_multiple_files = true;

message View {
  enum RenderMethod {
    RENDER_METHOD_UNSPECIFIED = 0;
    RENDER_METHOD_NONE = 1;
    RENDER_METHOD_PIXEL_PERFECT = 2;
  }

  // unique numeric id (not replicated within one DesignCompose file), which is
  // used by the renderer when building a layout tree, or when mapping from an
  // integer to a View.
  uint32 unique_id = 1;
  // id doesn't exist in vsw toolkit, but is useful for tracing from Figma node
  // to output
  string id = 2;
  // name doesn't exist in vsw toolkit, but is also useful for tracing.
  string name = 3;
  // information on the component that this view is an instance of (if any).
  ComponentInfo component_info = 4;

  // interactivity
  repeated interaction.Reaction reactions = 5;
  // interactivity related frame properties
  plugin.FrameExtras frame_extras = 6;
  // overflow (scrolling) data
  design.layout.ScrollInfo scroll_info = 7;
  // common style
  ViewStyle style = 8;
  // details that are unique to each view type.
  ViewData data = 9;
  // absolute bounding box of the view in the design document
  element.Rectangle design_absolute_bounding_box = 10;
  // hint for the renderer on how to render the view
  RenderMethod render_method = 11;
  // a hash of variable collection id -> mode id if variable modes are set on
  // this view
  map<string, string> explicit_variable_modes = 12;
}

message ViewData {
  message Container {
    design.element.ViewShape shape = 1;
    repeated View children = 2;
  }

  oneof view_data {
    Container container = 1;
    design.element.Text text = 2;
    StyledText styled_text = 3;
  }
}
